# bag_to_image

./: .gitignore  CMakeLists.txt  README.md  build.sh  manifest.xml
include/: args.hpp  io.hpp  macros.h
src/: bag_to_image.cpp
